--- a/kratifireworks/web/index.html
+++ b/kratifireworks/web/index.html
@@ -37,8 +37,12 @@
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
         navigator.serviceWorker.register('flutter_service_worker.js');
-      });
+      })
     }
+  </script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/pdf.js/2.8.335/pdf.min.js"></script>
+  <script type="text/javascript">
+     pdfjsLib.GlobalWorkerOptions.workerSrc = "//cdnjs.cloudflare.com/ajax/libs/pdf.js/2.8.335/pdf.worker.min.js";
   </script>
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
